--- a/views/Display-movie.css
+++ b/views/Display-movie.css
@@ -1,3 +1,15 @@
+img {
+    padding-bottom: 30px;
+    width: 30%;
+}
+td {
+    text-align: left;
+}
+th {
+    text-align: left;
+    padding-right: 50px;
+}
+
 /**************************** NavBar *************************/
 
 .navbar-div {
@@ -21,6 +33,7 @@
     color: #f1f6f9;
   }
 
+
  /****************************  Display div **************************/
 
 .movie-name {
@@ -34,6 +47,7 @@
      text-align: center;
      margin: auto;
      padding-top: 5rem;
+     padding-bottom: 40px;
  }
 
  .img-display {
@@ -43,3 +57,28 @@
  .input-table {
      margin: 0 0 50px 22px;
  }
+
+ .input-group {
+     margin-bottom: 30px;
+ }
+ .review {
+     margin-bottom: 30px;
+ }
+
+ .submit {
+    -webkit-border-radius: 8;
+    -moz-border-radius: 8;
+    border-radius: 8px;
+    font-family: Arial;
+    color: #f1f6f9;
+    font-size: 20px;
+    background: #9ba4b4;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+  }
+  
+  .submit:hover {
+    color: #fff;
+    background: #14274e;
+    text-decoration: none;
+  }
