--- a/views/by-year.ejs
+++ b/views/by-year.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Movie</title>
+    <title>Search by Year</title>
 
     <!-- Bootstap -->
     <link
@@ -13,7 +13,7 @@
     />
 
     <!-- CSS Style Sheet -->
-    <link rel="stylesheet" href="/Movie-list.css" />
+    <link rel="stylesheet" href="by-year.css" />
 
     <!-- JS Scrips for Bootstap -->
     <script
@@ -39,21 +39,37 @@
       <%- include (navBar) %>
     </div>
 
-    <div class="list-div">
-      <table>
-        <% for (let i = 0; i< movies.length; i++) { %>
-        <tr>
-          <td class="number"><%=i+1%>.</td>
-          <td><img src="<%= movies[i].img_url %>" alt="movie-poster" /></td>
-          <td>
-            <a
-              href="http://localhost:3000/select/movie/<%= movies[i].movie_id %>"
-              ><%= movies[i].title %></a
-            >
-          </td>
-        </tr>
-        <% } %>
-      </table>
+    <div class="row feat-div select-div">
+      <div class="dropdown feat-box col-lg-4">
+        <button
+          class="btn btn-secondary dropdown-toggle"
+          type="button"
+          id="dropdownMenuButton"
+          data-toggle="dropdown"
+          aria-haspopup="true"
+          aria-expanded="false"
+        >
+          From year:
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item" href="#">1902..</a>
+        </div>
+      </div>
+      <div class="dropdown feat-box col-lg-4">
+        <button
+          class="btn btn-secondary dropdown-toggle"
+          type="button"
+          id="dropdownMenuButton"
+          data-toggle="dropdown"
+          aria-haspopup="true"
+          aria-expanded="false"
+        >
+          to year:
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item" href="#">1903..</a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
