--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,141 +49,7 @@
     <section id="title">
       <div class="container-fluid">
         <!-- NavBar -->
-        <nav class="navbar navbar-expand-lg navbar-dark">
-          <a class="navbar-brand" href="index.html">CineFix</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-          <ul>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle genre-menu"
-                href="#"
-                id="navbarDropdownMenuLink"
-                data-toggle="dropdown"
-                aria-haspopup="true"
-                aria-expanded="false"
-              >
-                Genre
-              </a>
-              <div
-                class="dropdown-menu"
-                aria-labelledby="navbarDropdownMenuLink"
-              >
-                <a
-                  class="dropdown-item"
-                  href="http://localhost:3000/search/genre/action"
-                  >Action</a
-                >
-                <a
-                  class="dropdown-item"
-                  href="http://localhost:3000/search/genre/adventure"
-                  >Adventure</a
-                >
-                <a
-                  class="dropdown-item"
-                  href="http://localhost:3000/search/genre/comedy"
-                  >Comedy</a
-                >
-                <a
-                  class="dropdown-item"
-                  href="http://localhost:3000/search/genre/crime"
-                  >Crime</a
-                >
-                <a
-                  class="dropdown-item"
-                  href="http://localhost:3000/search/genre/documentary"
-                  >Documentary</a
-                >
-                <a
-                  class="dropdown-item"
-                  href="http://localhost:3000/search/genre/drama"
-                  >Drama</a
-                >
-                <a
-                  class="dropdown-item"
-                  href="http://localhost:3000/search/genre/fantasy"
-                  >Fantasy</a
-                >
-                <a
-                  class="dropdown-item"
-                  href="http://localhost:3000/search/genre/horror"
-                  >Horror</a
-                >
-                <a
-                  class="dropdown-item"
-                  href="http://localhost:3000/search/genre/music"
-                  >Music</a
-                >
-                <a
-                  class="dropdown-item"
-                  href="http://localhost:3000/search/genre/mystery"
-                  >Mystery</a
-                >
-                <a
-                  class="dropdown-item"
-                  href="http://localhost:3000/search/genre/romance"
-                  >Romance</a
-                >
-                <a
-                  class="dropdown-item"
-                  href="http://localhost:3000/search/genre/sci-fi"
-                  >Sci-Fi</a
-                >
-                <a
-                  class="dropdown-item"
-                  href="http://localhost:3000/search/genre/thriller"
-                  >Thriller</a
-                >
-                <a
-                  class="dropdown-item"
-                  href="http://localhost:3000/search/genre/sport"
-                  >Sport</a
-                >
-                <a
-                  class="dropdown-item"
-                  href="http://localhost:3000/search/genre/film-noir"
-                  >Film-Noir</a
-                >
-                <a
-                  class="dropdown-item"
-                  href="http://localhost:3000/search/genre/family"
-                  >Family</a
-                >
-                <a
-                  class="dropdown-item"
-                  href="http://localhost:3000/search/genre/short"
-                  >Short</a
-                >
-                <a
-                  class="dropdown-item"
-                  href="http://localhost:3000/search/genre/western"
-                  >Western</a
-                >
-              </div>
-            </li>
-          </ul>
-
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="Login-Signup/login.html">Login</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="Login-Signup/signup.html">Signup</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
+        <%- include (navBar) %>
 
         <!-- Search Div -->
         <div class="row">
@@ -212,7 +78,7 @@
           <div class="col-lg-6 column">
             <img
               class="main-img"
-              src="Chill movie.jpg"
+              src="./Chill movie.jpg"
               alt="Chill watching movie img"
             />
           </div>
@@ -224,26 +90,44 @@
     <section id="features">
       <div class="row feat-div">
         <div class="feat-box col-lg-4">
-          <a href="">
+          <a href="http://localhost:3000/search/year">
             <img
               class="feature-img"
               src="movie name.png"
               alt="movie name img"
             />
           </a>
-          <h3>Movie Name</h3>
+          <h3>By Year</h3>
         </div>
         <div class="feat-box col-lg-4">
-          <a href="">
-            <img class="feature-img" src="Genre.png" alt="genre img" />
+          <a href="http://localhost:3000/search/directors">
+            <img class="feature-img" src="Director.png" alt="director img" />
           </a>
-          <h3>Genre</h3>
+          <h3>By Director</h3>
         </div>
         <div class="feat-box col-lg-4">
-          <a href="">
+          <a href="http://localhost:3000/search/imdb">
             <img class="feature-img" src="Top Movie.png" alt="top movie img" />
           </a>
-          <h3>Top IMDb</h3>
+          <h3>By IMDb</h3>
+        </div>
+      </div>
+      <div class="row feat-div">
+        <div class="feat-box col-lg-4">
+          <a href="http://localhost:3000/search/urate">
+            <img
+              class="feature-img"
+              src="User rating.png"
+              alt="user rating img"
+            />
+          </a>
+          <h3>By User Rating</h3>
+        </div>
+        <div class="feat-box col-lg-4">
+          <a href="http://localhost:3000/search/actors">
+            <img class="feature-img" src="Actor.png" alt="actor img" />
+          </a>
+          <h3>By Actor</h3>
         </div>
       </div>
     </section>
@@ -269,28 +153,28 @@
           <div class="carousel-item active">
             <img
               class="slider-img d-block w-100"
-              src="slide 1.jpg"
+              src="./slide 1.jpg"
               alt="First slide"
             />
           </div>
           <div class="carousel-item">
             <img
               class="slider-img d-block w-100"
-              src="slide 2.jpg"
+              src="./slide 2.jpg"
               alt="Second slide"
             />
           </div>
           <div class="carousel-item">
             <img
               class="slider-img d-block w-100"
-              src="slide 3.jpg"
+              src="./slide 3.jpg"
               alt="Third slide"
             />
           </div>
           <div class="carousel-item">
             <img
               class="slider-img d-block w-100"
-              src="slide 4.jpg"
+              src="./slide 4.jpg"
               alt="Fouth slide"
             />
           </div>
