--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,7 +13,7 @@
     />
 
     <!-- CSS style sheets -->
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="./login.css">
 
     <!-- JS Scrips for Bootstap -->
     <script
@@ -36,19 +36,15 @@
 
   <body>
       <section id="main-card">
-        <form class="Active-login">
+        <form action="http://localhost:3000/login" class="Active-login" method="POST">
             <div class="form-group">
               <label for="exampleInputEmail1">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+              <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
               <small id="emailHelp" class="form-text">We'll never share your email with anyone else.</small>
             </div>
             <div class="form-group">
               <label for="exampleInputPassword1">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-            </div>
-            <div class="form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">Remember me</label>
+              <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
             </div>
             <button type="submit" class="btn btn-primary">Login</button>
           </form>
