--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -39,7 +39,7 @@
       <nav class="navbar navbar-expand-lg navbar-light py-3">
         <div class="container">
           <!-- Navbar Brand -->
-          <a href="#" class="navbar-brand">
+          <a href="http://localhost:3000/" class="navbar-brand">
             <img src="logo.png" alt="logo" width="150" />
           </a>
         </div>
@@ -59,11 +59,11 @@
 
         <!-- Registeration Form -->
         <div class="col-md-7 col-lg-6 ml-auto">
-          <form action="#">
+          <form action="http://localhost:3000/signup" method="POST">
             <div class="row">
 
               <!-- First Name -->
-              <div class="input-group col-lg-6 mb-4">
+              <!-- <div class="input-group col-lg-6 mb-4">
                 <div class="input-group-prepend">
                   <span
                     class="input-group-text bg-white px-4 border-md border-right-0"
@@ -78,10 +78,10 @@
                   placeholder="First Name"
                   class="form-control bg-white border-left-0 border-md"
                 />
-              </div>
+              </div> -->
 
               <!-- Last Name -->
-              <div class="input-group col-lg-6 mb-4">
+              <!-- <div class="input-group col-lg-6 mb-4">
                 <div class="input-group-prepend">
                   <span
                     class="input-group-text bg-white px-4 border-md border-right-0"
@@ -96,7 +96,7 @@
                   placeholder="Last Name"
                   class="form-control bg-white border-left-0 border-md"
                 />
-              </div>
+              </div> -->
 
 
               <!-- Username -->
@@ -110,7 +110,7 @@
                 </div>
                 <input
                   id="username"
-                  type=""
+                  type="text"
                   name="username"
                   placeholder="Username"
                   class="form-control bg-white border-left-0 border-md"
@@ -136,7 +136,7 @@
               </div>
 
               <!-- Password -->
-              <div class="input-group col-lg-6 mb-4">
+              <div class="input-group col-lg-12 mb-4">
                 <div class="input-group-prepend">
                   <span
                     class="input-group-text bg-white px-4 border-md border-right-0"
@@ -153,36 +153,15 @@
                 />
               </div>
 
-              <!-- Password Confirmation -->
-              <div class="input-group col-lg-6 mb-4">
-                <div class="input-group-prepend">
-                  <span
-                    class="input-group-text bg-white px-4 border-md border-right-0"
-                  >
-                    <i class="fa fa-lock text-muted"></i>
-                  </span>
-                </div>
-                <input
-                  id="passwordConfirmation"
-                  type="text"
-                  name="passwordConfirmation"
-                  placeholder="Confirm Password"
-                  class="form-control bg-white border-left-0 border-md"
-                />
-              </div>
-
               <!-- Submit Button -->
-              <div class="form-group col-lg-12 mx-auto mb-0">
-                <a href="#" class="btn btn-primary btn-block py-2">
-                  <span class="font-weight-bold">Create your account</span>
-                </a>
-              </div>
+             
+              <button type="submit" class="btn btn-primary btn-block py-2">Create your account</button>
 
               <!-- Already Registered -->
               <div class="text-center w-100">
                 <p class="text-muted font-weight-bold">
                   Already Registered?
-                  <a href="#" class="text-primary ml-2">Login</a>
+                  <a href="http://localhost:3000/loginpage" class="text-primary ml-2">Login</a>
                 </p>
               </div>
             </div>
