--- a/views/login.ejs
+++ b/views/login.ejs
@@ -46,7 +46,16 @@
               <label for="exampleInputPassword1">Password</label>
               <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
             </div>
-            <button type="submit" class="btn btn-primary">Login</button>
+            <div class="text-center w-100">
+              <button type="submit" class="btn btn-primary">Login</button>
+            </div>
+            
+            <div class="text-center w-100">
+                <p class="font-weight-bold">
+                  Not Registered?
+                  <a href="http://localhost:3000/signuppage" class="text-primary ml-2">Sign Up</a>
+                </p>
+              </div>
           </form>
       </section>
   </body>
